--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-Ontologie chauffeurs / passagers / courses
+<h3>Ontologie chauffeurs / passagers / courses </h3>
 
 <a href="drivers.context.jsonld"> drivers.context.jsonld </a>
 <br/>
 <a href="drivers.owl.ttl"> drivers.owl.ttl </a>
 
+<h3>Ontologie Collections botaniques ou zoologiques</h3>
+<a href="biological-collections.owl.ttl"> biological-collections.owl.ttl </a>
