add another UML example: sioc.ttl.xmi

--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <p>I don't pretend to make an exact UML equivalent of any OWL ontology.
 This is just a way to make UML diagrams from RDF vocabularies, using the Open Source tool ArgoUML.</p>
 
-UML model for FOAF in XMI
-<a href="foaf.ttl.xmi"> foaf.ttl.xmi </a>
-<br/>
+UML model for FOAF in XMI <a href="foaf.ttl.xmi"> foaf.ttl.xmi </a> <br/>
+UML model for SIOC in XMI <a href="sioc.ttl.xmi"> sioc.ttl.xmi </a> <br/>
 UML diagram of FOAF for ArgoUML 0.34
 <a href="foaf.ttl.xmi.zargo">
 foaf.ttl.xmi.zargo
