Add Description Of A Software == DOAS

--- a/index.html
+++ b/index.html
@@ -1,8 +1,30 @@
 <html>
 <head>
-      <meta content="text/html; charset=UTF-8" http-equiv="Content-type"/>
+  <meta content="text/html; charset=UTF-8" http-equiv="Content-type"/>
 </head>
 <body>
+
+<h3 id="doas">Ontologie Description Of A Software == DOAS</h3>
+<a href="doas.owl.ttl">doas.owl.ttl</a>
+
+<h3 id="biological-collections">Ontologie Collections botaniques ou zoologiques</h3>
+<a href="biological-collections.owl.ttl"> biological-collections.owl.ttl </a>
+
+<h3 id="">Ontologie chauffeurs / passagers / courses </h3>
+
+<a href="drivers.context.jsonld"> drivers.context.jsonld </a>
+<br/>
+<a href="drivers.owl.ttl"> drivers.owl.ttl </a>
+
+<h3 id="task-management">Ontologie Gestion de tâches </h3>
+<a href="task-management.owl.ttl"> task-management.owl.ttl </a>
+
+<h3 id="directed-graph">Ontologie graphes orientés </h3>
+<a href="directed-graph.owl.ttl"> directed-graph.owl.ttl </a>
+<br/>
+<a href="examples/dirgraph.ttl"> examples/dirgraph.ttl </a>
+
+
 <h3>Ontologies in UML diagrams</h3>
 <p>I don't pretend to make an exact UML equivalent of any OWL ontology.
 This is just a way to make UML diagrams from RDF vocabularies, using the Open Source tool ArgoUML.</p>
@@ -43,23 +65,6 @@ owl2uml.sh</a>
 The sed script <a href="https://sourceforge.net/p/deductions/code/HEAD/tree/n3_nojs/owl_to_uml.sed">
 owl_to_uml.sed</a>
 <br/>
-
-<h3 id="">Ontologie chauffeurs / passagers / courses </h3>
-
-<a href="drivers.context.jsonld"> drivers.context.jsonld </a>
-<br/>
-<a href="drivers.owl.ttl"> drivers.owl.ttl </a>
-
-<h3 id="biological-collections">Ontologie Collections botaniques ou zoologiques</h3>
-<a href="biological-collections.owl.ttl"> biological-collections.owl.ttl </a>
-
-<h3 id="task-management">Ontologie Gestion de tâches </h3>
-<a href="task-management.owl.ttl"> task-management.owl.ttl </a>
-
-<h3 id="directed-graph">Ontologie graphes orientés </h3>
-<a href="directed-graph.owl.ttl"> directed-graph.owl.ttl </a>
-<br/>
-<a href="examples/dirgraph.ttl"> examples/dirgraph.ttl </a>
 
 </body>
 </html>
