--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <h3 id="biological-collections">Ontologie Collections botaniques ou zoologiques</h3>
 <a href="biological-collections.owl.ttl"> biological-collections.owl.ttl </a>
+<br/>
+Extension pour les échanges de graines:
+<a href="seeds.owl.ttl"> seeds.owl.ttl </a>
 
 <h3 id="">Ontologie chauffeurs / passagers / courses </h3>
 
